--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ cache:
   directories:
   - vendor/cookbooks
 sudo: false
-bundler_args: --without integration
+bundler_args: --without integration --path=$HOME/bundle
 rvm:
   - 1.9.3
   - 2.0.0
