Try to force bundler vendor caching

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: ruby
 cache:
   bundler: true
   directories:
+  - $HOME/vendor/bundle
   - vendor/cookbooks
 sudo: false
 bundler_args: --without integration --path=$HOME/bundle
