Fix error in bundler path

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ cache:
   - ../vendor/bundle
   - vendor/cookbooks
 sudo: false
-bundler_args: --without integration --path=$PWD/vendor/bundle
+bundler_args: --without integration --path=$PWD/../vendor/bundle
 rvm:
   - 1.9.3
   - 2.0.0
