--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -31,6 +31,9 @@ Style/FileName:
 Style/Next:
   Enabled: false
 
+Style/NumericLiterals:
+  Enabled: false
+
 Style/SpaceAroundEqualsInParameterDefault:
   EnforcedStyle: no_space
 
