Add lookup for dashboard file in `Chef::Config[:cookbook_path]` when running in chef-solo (#63)

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -7,29 +7,76 @@ driver:
     cpus: 2
     cpuexecutioncap: 80
 
-provisioner:
-  name: chef_zero
-
 platforms:
-  - name: ubuntu-12.04
+  - name: ubuntu-12.04-chef-zero
+    provisioner:
+      name: chef_zero
+    driver:
+      box: ubuntu-12.04
+      box_url: https://opscode-vm-bento.s3.amazonaws.com/vagrant/virtualbox/opscode_ubuntu-12.04_chef-provisionerless.box
     run_list:
       - recipe[apt::default]
       - recipe[curl::default]
-  - name: ubuntu-14.04
+  - name: ubuntu-14.04-chef-zero
+    provisioner:
+      name: chef_zero
     run_list:
       - recipe[apt::default]
       - recipe[curl::default]
+    driver:
+      box: ubuntu-14.04
+      box_url: https://opscode-vm-bento.s3.amazonaws.com/vagrant/virtualbox/opscode_ubuntu-14.04_chef-provisionerless.box
     attributes:
       grafana:
         webserver_listen: ''
-  - name: debian-7.4
+  - name: debian-7.4-chef-zero
+    provisioner:
+      name: chef_zero
     driver:
       box: debian-7.4.0
       box_url: https://opscode-vm-bento.s3.amazonaws.com/vagrant/virtualbox/opscode_debian-7.4_chef-provisionerless.box
     run_list:
       - recipe[apt::default]
       - recipe[curl::default]
-  - name: centos-6.4
+  - name: centos-6.4-chef-zero
+    provisioner:
+      name: chef_zero
+    driver:
+      box: centos-6.4
+      box_url: https://opscode-vm-bento.s3.amazonaws.com/vagrant/virtualbox/opscode_centos-6.4_chef-provisionerless.box
+  - name: ubuntu-12.04-chef-solo
+    provisioner:
+      name: chef_solo
+    driver:
+      box: ubuntu-12.04
+      box_url: https://opscode-vm-bento.s3.amazonaws.com/vagrant/virtualbox/opscode_ubuntu-12.04_chef-provisionerless.box
+    run_list:
+      - recipe[apt::default]
+      - recipe[curl::default]
+  - name: ubuntu-14.04-chef-solo
+    provisioner:
+      name: chef_solo
+    driver:
+      box: ubuntu-14.04
+      box_url: https://opscode-vm-bento.s3.amazonaws.com/vagrant/virtualbox/opscode_ubuntu-14.04_chef-provisionerless.box
+    run_list:
+      - recipe[apt::default]
+      - recipe[curl::default]
+    attributes:
+      grafana:
+        webserver_listen: ''
+  - name: debian-7.4-chef-solo
+    provisioner:
+      name: chef_solo
+    driver:
+      box: debian-7.4.0
+      box_url: https://opscode-vm-bento.s3.amazonaws.com/vagrant/virtualbox/opscode_debian-7.4_chef-provisionerless.box
+    run_list:
+      - recipe[apt::default]
+      - recipe[curl::default]
+  - name: centos-6.4-chef-solo
+    provisioner:
+      name: chef_solo
     driver:
       box: centos-6.4
       box_url: https://opscode-vm-bento.s3.amazonaws.com/vagrant/virtualbox/opscode_centos-6.4_chef-provisionerless.box
