--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,10 @@
 language: ruby
 cache:
-  bundler: true
   directories:
-  - ../vendor/bundle
+  - vendor/bundle
   - vendor/cookbooks
 sudo: false
-bundler_args: --without integration --path=$PWD/../vendor/bundle
+bundler_args: --without integration --path=$PWD/vendor/bundle
 rvm:
   - 2.0
   - 2.1
