--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -1,88 +1,30 @@
 ---
 driver:
   name: vagrant
-  require_chef_omnibus: '12.3.0'
   customize:
     memory: 1024
     cpus: 2
-    cpuexecutioncap: 80
 
 platforms:
-  - name: ubuntu-12.04-chef-zero
-    provisioner:
-      name: chef_zero
-    driver:
-      box: ubuntu-12.04
-      box_url: https://opscode-vm-bento.s3.amazonaws.com/vagrant/virtualbox/opscode_ubuntu-12.04_chef-provisionerless.box
-    run_list:
-      - recipe[apt::default]
-      - recipe[curl::default]
-  - name: ubuntu-14.04-chef-zero
-    provisioner:
-      name: chef_zero
-    run_list:
-      - recipe[apt::default]
-      - recipe[curl::default]
-    driver:
-      box: ubuntu-14.04
-      box_url: https://opscode-vm-bento.s3.amazonaws.com/vagrant/virtualbox/opscode_ubuntu-14.04_chef-provisionerless.box
-    attributes:
-      grafana:
-        webserver_listen: ''
-  - name: debian-7.4-chef-zero
-    provisioner:
-      name: chef_zero
-    driver:
-      box: debian-7.4.0
-      box_url: https://opscode-vm-bento.s3.amazonaws.com/vagrant/virtualbox/opscode_debian-7.4_chef-provisionerless.box
-    run_list:
-      - recipe[apt::default]
-      - recipe[curl::default]
-  - name: centos-6.6-chef-zero
-    provisioner:
-      name: chef_zero
-    driver:
-      box: centos-6.6
-      box_url: https://opscode-vm-bento.s3.amazonaws.com/vagrant/virtualbox/opscode_centos-6.6_chef-provisionerless.box
-    attributes:
-      grafana:
-        webserver_listen: ''
-  - name: ubuntu-12.04-chef-solo
-    provisioner:
-      name: chef_solo
-    driver:
-      box: ubuntu-12.04
-      box_url: https://opscode-vm-bento.s3.amazonaws.com/vagrant/virtualbox/opscode_ubuntu-12.04_chef-provisionerless.box
-    run_list:
-      - recipe[apt::default]
-      - recipe[curl::default]
-  - name: ubuntu-14.04-chef-solo
-    provisioner:
-      name: chef_solo
-    driver:
-      box: ubuntu-14.04
-      box_url: https://opscode-vm-bento.s3.amazonaws.com/vagrant/virtualbox/opscode_ubuntu-14.04_chef-provisionerless.box
+  - name: ubuntu-14.04
     run_list:
       - recipe[apt::default]
       - recipe[curl::default]
     attributes:
       grafana:
         webserver_listen: ''
-  - name: debian-7.4-chef-solo
-    provisioner:
-      name: chef_solo
-    driver:
-      box: debian-7.4.0
-      box_url: https://opscode-vm-bento.s3.amazonaws.com/vagrant/virtualbox/opscode_debian-7.4_chef-provisionerless.box
+  - name: debian-7.4
     run_list:
       - recipe[apt::default]
       - recipe[curl::default]
-  - name: centos-6.6-chef-solo
-    provisioner:
-      name: chef_solo
-    driver:
-      box: centos-6.6
-      box_url: https://opscode-vm-bento.s3.amazonaws.com/vagrant/virtualbox/opscode_centos-6.6_chef-provisionerless.box
+  - name: centos-6.9
+    attributes:
+      grafana:
+        webserver_listen: ''
+  - name: centos-7.2
+    attributes:
+      grafana:
+        webserver_listen: ''
 
 suites:
   - name: default
@@ -102,9 +44,3 @@ suites:
         ini:
           server:
             http_port: 3015
-  # - name: source
-  #   run_list:
-  #     - recipe[grafana::default]
-  #   attributes:
-  #     grafana:
-  #       install_type: source
