--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -2,6 +2,17 @@
 driver:
   name: vagrant
 
+provisioner:
+  name: chef_zero
+  product_name: chef
+  product_version: <%= ENV['CHEF_VERSION'] || 'latest' %>
+  install_strategy: once
+
+client_rb:
+  treat_deprecation_warnings_as_errors: true
+verifier:
+  name: inspec
+
 platforms:
   - name: ubuntu-14.04
     run_list:
@@ -10,15 +21,15 @@ platforms:
     attributes:
       grafana:
         webserver_listen: ''
-  - name: debian-7.4
+  - name: debian-7
     run_list:
       - recipe[apt::default]
       - recipe[curl::default]
-  - name: centos-6.9
+  - name: centos-6
     attributes:
       grafana:
         webserver_listen: ''
-  - name: centos-7.2
+  - name: centos-7
     attributes:
       grafana:
         webserver_listen: ''
