--- a/.travis.yml
+++ b/.travis.yml
@@ -1,25 +1,89 @@
-rvm: 2.3.1
 sudo: required
-services: docker
+dist: trusty
 
 addons:
   apt:
     sources:
-      - chef-stable-precise
+      - chef-stable-trusty
     packages:
       - chefdk
 
-# Don't `bundle install`
 install: echo "skip bundle install"
 
-# Ensure we make ChefDK's Ruby the default
+branches:
+  only:
+    - master
+
+services: docker
+
+stages:
+  - unit
+  - danger
+  - test
+
+env:
+- INSTANCE=default-debian-8
+- INSTANCE=default-debian-9
+- INSTANCE=default-centos-6
+- INSTANCE=default-centos-7
+- INSTANCE=default-fedora-26
+- INSTANCE=default-fedora-27
+- INSTANCE=default-ubuntu-1404
+- INSTANCE=default-ubuntu-1604
+- INSTANCE=default-opensuse-leap
+- INSTANCE=default-amazonlinux
+
+- INSTANCE=package-debian-8
+- INSTANCE=package-debian-9
+- INSTANCE=package-centos-6
+- INSTANCE=package-centos-7
+- INSTANCE=package-fedora-26
+- INSTANCE=package-fedora-27
+- INSTANCE=package-ubuntu-1404
+- INSTANCE=package-ubuntu-1604
+- INSTANCE=package-opensuse-leap
+- INSTANCE=package-amazonlinux
+
+- INSTANCE=plugins-debian-8
+- INSTANCE=plugins-debian-9
+- INSTANCE=plugins-centos-6
+- INSTANCE=plugins-centos-7
+- INSTANCE=plugins-fedora-26
+- INSTANCE=plugins-fedora-27
+- INSTANCE=plugins-ubuntu-1404
+- INSTANCE=plugins-ubuntu-1604
+- INSTANCE=plugins-opensuse-leap
+- INSTANCE=plugins-amazonlinux
+
 before_script:
-  # https://github.com/zuazo/kitchen-in-travis-native/issues/1#issuecomment-142230889
   - sudo iptables -L DOCKER || ( echo "DOCKER iptables chain missing" ; sudo iptables -N DOCKER )
-  - eval "$(/opt/chefdk/bin/chef shell-init bash)"
-  - /opt/chefdk/embedded/bin/chef gem install kitchen-docker
-script:
-  - /opt/chefdk/embedded/bin/chef --version
-  - /opt/chefdk/embedded/bin/rubocop --version
-  - /opt/chefdk/embedded/bin/foodcritic --version
-  - /opt/chefdk/embedded/bin/rake
+  - eval "$(shell-init bash)"
+  - chef --version
+  - cookstyle --version
+  - foodcritic --version
+  - chef gem install danger
+
+script: KITCHEN_LOCAL_YAML=.kitchen.dokken.yml /opt/chefdk/bin/kitchen verify ${INSTANCE}
+
+matrix:
+  include:
+    - script:
+      - chef exec delivery local all
+
+    - script:
+      -
+      env: DANGER
+  allow_failures:
+    env:
+    - INSTANCE=package-ubuntu-1404
+    - INSTANCE=source-ubuntu-1404
+
+jobs:
+  include:
+    - stage: unit
+      script: chef exec delivery local all
+      env: UNIT_AND_LINT=1
+
+    - stage: danger
+      script: chef exec danger
+      env: DANGER
