Update to grafana 5.3.2
Also add testing on Ubuntu 18.04

Signed-off-by: Eric Heydrick <eheydrick@gmail.com>

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -28,6 +28,13 @@ platforms:
     attributes:
       grafana:
         webserver_listen: ''
+  - name: ubuntu-18.04
+    run_list:
+      - recipe[apt::default]
+      - recipe[curl::default]
+    attributes:
+      grafana:
+        webserver_listen: ''
   - name: centos-6
     attributes:
       grafana:
