--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,3 +11,28 @@ workflows:
           context: Danger
       - kitchen/lint:
           name: lint
+#       - kitchen/dokken-single:
+#           name: centos-7
+#           platform: centos-7
+#           suite: default
+#           requires: [ lint, danger ]
+#       - kitchen/dokken-single:
+#           name: debian-8
+#           platform: debian-8
+#           suite: default
+#           requires: [ lint, danger ]
+#       - kitchen/dokken-single:
+#           name: debian-9
+#           platform: debian-9
+#           suite: default
+#           requires: [ lint, danger ]
+#       - kitchen/dokken-single:
+#           name: ubuntu-16.04
+#           platform: ubuntu-1604
+#           suite: default
+#           requires: [ lint, danger ]
+#       - kitchen/dokken-single:
+#           name: ubuntu-18.04
+#           platform: ubuntu-1804
+#           suite: default
+#           requires: [ lint, danger ]
