--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -38,6 +38,14 @@ platforms:
         webserver_listen: ''
 
 suites:
+  - name: install
+    run_list:
+      - recipe[grafana::install_test]
+    attributes:
+      grafana:
+        ini:
+          server:
+            http_addr: '127.0.0.1'
   - name: default
     run_list:
       - recipe[grafana::default]
