--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,25 +14,25 @@ workflows:
       - kitchen/dokken-single:
           name: centos-7
           platform: centos-7
-          suite: default
+          suite: install
           requires: [ lint, danger ]
       - kitchen/dokken-single:
           name: debian-8
           platform: debian-8
-          suite: default
+          suite: install
           requires: [ lint, danger ]
       - kitchen/dokken-single:
           name: debian-9
           platform: debian-9
-          suite: default
+          suite: install
           requires: [ lint, danger ]
       - kitchen/dokken-single:
           name: ubuntu-16.04
           platform: ubuntu-1604
-          suite: default
+          suite: install
           requires: [ lint, danger ]
       - kitchen/dokken-single:
           name: ubuntu-18.04
           platform: ubuntu-1804
-          suite: default
+          suite: install
           requires: [ lint, danger ]
