--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,27 +12,22 @@ workflows:
       - kitchen/lint:
           name: lint
       - kitchen/dokken-single:
+          name: centos-6
+          platform: centos-6
+          suite: default
+          requires: [ lint, danger ]
+      - kitchen/dokken-single:
           name: centos-7
           platform: centos-7
-          suite: install
+          suite: default
           requires: [ lint, danger ]
       - kitchen/dokken-single:
           name: debian-8
           platform: debian-8
-          suite: install
-          requires: [ lint, danger ]
-      - kitchen/dokken-single:
-          name: debian-9
-          platform: debian-9
-          suite: install
+          suite: default
           requires: [ lint, danger ]
       - kitchen/dokken-single:
           name: ubuntu-16.04
           platform: ubuntu-1604
-          suite: install
-          requires: [ lint, danger ]
-      - kitchen/dokken-single:
-          name: ubuntu-18.04
-          platform: ubuntu-1804
-          suite: install
+          suite: default
           requires: [ lint, danger ]
