--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,42 +12,42 @@ workflows:
       - kitchen/lint:
           name: lint
       - kitchen/dokken-single:
-          name: centos-6
+          name: default-centos-6
           platform: centos-6
           suite: default
           requires: [ lint, danger ]
       - kitchen/dokken-single:
-          name: centos-7
+          name: default-centos-7
           platform: centos-7
           suite: default
           requires: [ lint, danger ]
       - kitchen/dokken-single:
-          name: debian-8
+          name: default-debian-8
           platform: debian-8
           suite: default
           requires: [ lint, danger ]
       - kitchen/dokken-single:
-          name: ubuntu-16.04
+          name: default-ubuntu-16.04
           platform: ubuntu-1604
           suite: default
           requires: [ lint, danger ]
       - kitchen/dokken-single:
-          name: centos-6
+          name: ldap-centos-6
           platform: centos-6
           suite: ldap
           requires: [ lint, danger ]
       - kitchen/dokken-single:
-          name: centos-7
+          name: ldap-centos-7
           platform: centos-7
           suite: ldap
           requires: [ lint, danger ]
       - kitchen/dokken-single:
-          name: debian-8
+          name: ldap-debian-8
           platform: debian-8
           suite: ldap
           requires: [ lint, danger ]
       - kitchen/dokken-single:
-          name: ubuntu-16.04
+          name: ldap-ubuntu-16.04
           platform: ubuntu-1604
           suite: ldap
           requires: [ lint, danger ]
