enable circleci 2.0 orb testing

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,53 +1,35 @@
-version: 2.1
+---
+lint_and_unit: &lint_and_unit
+  - delivery
+  - danger
+  - lint-yaml
+  - lint-markdown
 
+version: 2.1
 orbs:
-  kitchen: sous-chefs/kitchen@1.0.0
+  kitchen: sous-chefs/kitchen@2
 
 workflows:
   kitchen:
     jobs:
+      # Lint and Unit Test
+      - kitchen/yamllint:
+          name: lint-yaml
+      - kitchen/mdlint:
+          name: lint-markdown
       - kitchen/danger:
           name: danger
           context: Danger
-      - kitchen/lint:
-          name: lint
+      - kitchen/delivery:
+          name: delivery
+
       - kitchen/dokken-single:
-          name: default-centos-6
-          platform: centos-6
+          name: default
           suite: default
-          requires: [ lint, danger ]
+          requires:
+            *lint_and_unit
       - kitchen/dokken-single:
-          name: default-centos-7
-          platform: centos-7
-          suite: default
-          requires: [ lint, danger ]
-      - kitchen/dokken-single:
-          name: default-debian-8
-          platform: debian-8
-          suite: default
-          requires: [ lint, danger ]
-      - kitchen/dokken-single:
-          name: default-ubuntu-16.04
-          platform: ubuntu-1604
-          suite: default
-          requires: [ lint, danger ]
-      - kitchen/dokken-single:
-          name: ldap-centos-6
-          platform: centos-6
+          name: ldap
           suite: ldap
-          requires: [ lint, danger ]
-      - kitchen/dokken-single:
-          name: ldap-centos-7
-          platform: centos-7
-          suite: ldap
-          requires: [ lint, danger ]
-      - kitchen/dokken-single:
-          name: ldap-debian-8
-          platform: debian-8
-          suite: ldap
-          requires: [ lint, danger ]
-      - kitchen/dokken-single:
-          name: ldap-ubuntu-16.04
-          platform: ubuntu-1604
-          suite: ldap
-          requires: [ lint, danger ]
+          requires:
+            *lint_and_unit
