--- a/kitchen.yml
+++ b/kitchen.yml
@@ -27,3 +27,7 @@ suites:
   - name: ldap
     run_list:
       - recipe[test::ldap]
+
+  - name: plugins
+    run_list:
+      - recipe[test::plugins]
