--- a/kitchen.yml
+++ b/kitchen.yml
@@ -5,7 +5,8 @@ driver:
 provisioner:
   name: chef_zero
   product_name: chef
-  product_version: <%= ENV['CHEF_VERSION'] || 'latest' %>
+  # product_version: <%= ENV['CHEF_VERSION'] || 'latest' %>
+  product_version: 14
   http_proxy: <%= ENV['http_proxy'] %>
   https_proxy: <%= ENV['https_proxy'] %>
   no_proxy: <%= ENV['no_proxy'] %>
