--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,96 +10,16 @@ orbs:
 workflows:
   kitchen:
     jobs:
-      - kitchen/yamllint:
-          name: lint-yaml
-      - kitchen/mdlint:
-          name: lint-markdown
-      - kitchen/danger:
-          name: danger
-          context: Danger
-      - kitchen/delivery:
-          name: delivery
+    #   - kitchen/yamllint:
+    #       name: lint-yaml
+    #   - kitchen/mdlint:
+    #       name: lint-markdown
+    #   - kitchen/danger:
+    #       name: danger
+    #       context: Danger
+    #   - kitchen/delivery:
+    #       name: delivery
       - kitchen/dokken-single:
-          name: default-debian-8
-          suite: default-debian-8
-          requires: *lint_and_unit
-      - kitchen/dokken-single:
-          name: default-debian-9
-          suite: default-debian-9
-          requires: *lint_and_unit
-      - kitchen/dokken-single:
-          name: default-centos-6
-          suite: default-centos-6
-          requires: *lint_and_unit
-      - kitchen/dokken-single:
-          name: default-centos-7
-          suite: default-centos-7
-          requires: *lint_and_unit
-      - kitchen/dokken-single:
-          name: default-ubuntu-1604
-          suite: default-ubuntu-1604
-          requires: *lint_and_unit
-      - kitchen/dokken-single:
-          name: default-ubuntu-1804
-          suite: default-ubuntu-1804
-          requires: *lint_and_unit
-      - kitchen/dokken-single:
-          name: default-amazonlinux
-          suite: default-amazonlinux
-          requires: *lint_and_unit
-      - kitchen/dokken-single:
-          name: ldap-debian-8
-          suite: ldap-debian-8
-          requires: *lint_and_unit
-      - kitchen/dokken-single:
-          name: ldap-debian-9
-          suite: ldap-debian-9
-          requires: *lint_and_unit
-      - kitchen/dokken-single:
-          name: ldap-centos-6
-          suite: ldap-centos-6
-          requires: *lint_and_unit
-      - kitchen/dokken-single:
-          name: ldap-centos-7
-          suite: ldap-centos-7
-          requires: *lint_and_unit
-      - kitchen/dokken-single:
-          name: ldap-ubuntu-1604
-          suite: ldap-ubuntu-1604
-          requires: *lint_and_unit
-      - kitchen/dokken-single:
-          name: ldap-ubuntu-1804
-          suite: ldap-ubuntu-1804
-          requires: *lint_and_unit
-      - kitchen/dokken-single:
-          name: ldap-amazonlinux
-          suite: ldap-amazonlinux
-          requires: *lint_and_unit
-      - kitchen/dokken-single:
-          name: plugins-debian-8
-          suite: plugins-debian-8
-          requires: *lint_and_unit
-      - kitchen/dokken-single:
-          name: plugins-debian-9
-          suite: plugins-debian-9
-          requires: *lint_and_unit
-      - kitchen/dokken-single:
-          name: plugins-centos-6
-          suite: plugins-centos-6
-          requires: *lint_and_unit
-      - kitchen/dokken-single:
-          name: plugins-centos-7
-          suite: plugins-centos-7
-          requires: *lint_and_unit
-      - kitchen/dokken-single:
-          name: plugins-ubuntu-1604
-          suite: plugins-ubuntu-1604
-          requires: *lint_and_unit
-      - kitchen/dokken-single:
-          name: plugins-ubuntu-1804
-          suite: plugins-ubuntu-1804
-          requires: *lint_and_unit
-      - kitchen/dokken-single:
-          name: plugins-amazonlinux
-          suite: plugins-amazonlinux
+          name: basic-centos-7
+          suite: basic-centos-7
           requires: *lint_and_unit
