accumulator pattern using run_state
This commit changes all resources to use the accumulator via run_state and a config writer resource
this means that all users can have the template converge when they require and do not need to be racing for the end
it also means if any resource blows up between different accumulator resources it will not write a half created config file
at the end of the run and restart the application

Signed-off-by: Jason Field <jason@avon-lea.co.uk>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,6 +20,15 @@ workflows:
     #   - kitchen/delivery:
     #       name: delivery
       - kitchen/dokken-single:
+          name: default-centos-7
+          suite: default-centos-7
+      - kitchen/dokken-single:
+          name: ldap-centos-7
+          suite: ldap-centos-7
+      - kitchen/dokken-single:
           name: basic-centos-7
           suite: basic-centos-7
+      - kitchen/dokken-single:
+          name: plugins-centos-7
+          suite: plugins-centos-7
         #   requires: *lint_and_unit
