Additional testing of API resources
This commit adds in additional testing of api resources

Signed-off-by: Jason Field <jason@avon-lea.co.uk>

--- a/kitchen.yml
+++ b/kitchen.yml
@@ -35,3 +35,7 @@ suites:
   - name: basic
     run_list:
       - recipe[test::basic]
+
+  - name: configure
+    run_list:
+      - recipe[test::configure]
