--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -139,6 +139,34 @@ workflows:
           name: basic-amazonlinux
           suite: basic-amazonlinux
           requires: *lint_and_unit
+      - kitchen/dokken-single:
+          name: configure-debian-8
+          suite: configure-debian-8
+          requires: *lint_and_unit
+      - kitchen/dokken-single:
+          name: configure-debian-9
+          suite: configure-debian-9
+          requires: *lint_and_unit
+      - kitchen/dokken-single:
+          name: configure-centos-6
+          suite: configure-centos-6
+          requires: *lint_and_unit
+      - kitchen/dokken-single:
+          name: configure-centos-7
+          suite: configure-centos-7
+          requires: *lint_and_unit
+      - kitchen/dokken-single:
+          name: configure-ubuntu-1604
+          suite: configure-ubuntu-1604
+          requires: *lint_and_unit
+      - kitchen/dokken-single:
+          name: configure-ubuntu-1804
+          suite: configure-ubuntu-1804
+          requires: *lint_and_unit
+      - kitchen/dokken-single:
+          name: configure-amazonlinux
+          suite: configure-amazonlinux
+          requires: *lint_and_unit
       - final:
           requires:
             - default-debian-8
@@ -169,3 +197,10 @@ workflows:
             - basic-ubuntu-1604
             - basic-ubuntu-1804
             - basic-amazonlinux
+            - configure-debian-8
+            - configure-debian-9
+            - configure-centos-6
+            - configure-centos-7
+            - configure-ubuntu-1604
+            - configure-ubuntu-1804
+            - configure-amazonlinux
