--- a/kitchen.dokken.yml
+++ b/kitchen.dokken.yml
@@ -58,3 +58,8 @@ platforms:
     driver:
       image: dokken/amazonlinux
       pid_one_command: /sbin/init
+
+  - name: amazonlinux-2
+    driver:
+      image: dokken/amazonlinux-2
+      pid_one_command: /usr/lib/systemd/systemd
