added amazon linux 2

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,6 +46,7 @@ jobs:
           - 'ubuntu-1604'
           - 'ubuntu-1804'
           - 'amazonlinux'
+          - 'amazonlinux-2'
         suite:
           - 'default'
           - 'ldap'
