--- a/.github/workflows/danger.yml
+++ b/.github/workflows/danger.yml
@@ -11,7 +11,7 @@ jobs:
       - name: Check out code
         uses: actions/checkout@master
       - name: Run Danger
-        uses: actionshub/danger-rb@master
+        uses: actionshub/danger-rb@fix
         env:
           DANGER_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 # hello world
