--- a/.github/workflows/danger.yml
+++ b/.github/workflows/danger.yml
@@ -21,9 +21,8 @@ jobs:
           ${{ runner.os }}-gems-
     - uses: MeilCli/danger-action@v4
       with:
-        plugins_file: '.github/Gemfile'
         install_path: 'vendor/bundle'
-        danger_file: '.github/Dangerfile'
+        danger_file: 'Dangerfile'
         danger_id: 'danger-pr'
       env:
         DANGER_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
