--- a/.github/workflows/danger.yml
+++ b/.github/workflows/danger.yml
@@ -1,29 +1,14 @@
 ---
 name: danger
-
 on:
   pull_request:
-
 jobs:
   danger:
     runs-on: ubuntu-latest
-    if: github.event_name  == 'pull_request' # if only run pull request when multiple trigger workflow
     steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-ruby@v1
-      with:
-        ruby-version: '2.6'
-    - uses: actions/cache@v1
-      with:
-        path: vendor/bundle
-        key: ${{ runner.os }}-gems-${{ hashFiles('.github/Gemfile') }} # change your gemfile path
-        restore-keys: |
-          ${{ runner.os }}-gems-
-    - uses: MeilCli/danger-action@v4
-      with:
-        install_path: 'vendor/bundle'
-        danger_file: 'Dangerfile'
-        danger_id: 'danger-pr'
-      env:
-        DANGER_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-# hello world
+      - name: Check out code
+        uses: actions/checkout@master
+      - name: Run Danger
+        uses: actionshub/danger-rb@master
+        env:
+          DANGER_GITHUB_API_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
