Add tests into github ci config

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,6 +53,7 @@ jobs:
           - 'plugins'
           - 'basic'
           - 'configure'
+          - 'azuread'
       fail-fast: false
 
     steps:
