--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,9 +37,13 @@ jobs:
   md-links:
     runs-on: ubuntu-latest
     steps:
+      - name: Check out code
+        uses: actions/checkout@master
       - name: markdown-link-check
         uses: gaurav-nelson/github-action-markdown-link-check@1.0.2
-
+        with:
+          use-verbose-mode: 'yes'
+          folder-path: 'documentation'
 
   dokken:
     needs: [mdl, yamllint, delivery]
