--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,9 +40,11 @@ jobs:
     strategy:
       matrix:
         os:
-          - 'debian-8'
+          - 'amazonlinux-2'
           - 'debian-9'
+          - 'debian-10'
           - 'centos-7'
+          - 'centos-8'
           - 'ubuntu-1804'
           - 'ubuntu-2004'
         suite:
