--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,6 +55,7 @@ jobs:
           - 'basic'
           - 'configure'
           - 'azuread'
+          - 'config_plugins'
       fail-fast: false
 
     steps:
