Added allow_loading_unsigned_plugins management (#396)
* Added allow_loading_unsigned_plugins management

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,6 +55,7 @@ jobs:
           - 'basic'
           - 'configure'
           - 'azuread'
+          - 'config-plugins'
       fail-fast: false
 
     steps:
