--- a/kitchen.yml
+++ b/kitchen.yml
@@ -50,3 +50,7 @@ suites:
   - name: azuread
     run_list:
       - recipe[test::azuread]
+
+  - name: config_plugins
+    run_list:
+      - recipe[test::config_plugins]
