--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,6 +15,8 @@ jobs:
         uses: actions/checkout@v2
       - name: Run Chef Delivery
         uses: actionshub/chef-delivery@main
+        with:
+          gems: "deepsort"
         env:
           CHEF_LICENSE: accept-no-persist
 
