--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,6 +47,7 @@ jobs:
           - 'debian-10'
           - 'centos-7'
           - 'centos-8'
+          - 'fedora-latest'
           - 'ubuntu-1804'
           - 'ubuntu-2004'
         suite:
