--- a/kitchen.dokken.yml
+++ b/kitchen.dokken.yml
@@ -38,6 +38,11 @@ platforms:
       platform: rhel
       pid_one_command: /usr/lib/systemd/systemd
 
+  - name: fedora-latest
+    driver:
+      image: dokken/fedora-latest
+      pid_one_command: /usr/lib/systemd/systemd
+
   - name: ubuntu-18.04
     driver:
       image: dokken/ubuntu-18.04
