--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,14 +24,19 @@ jobs:
     strategy:
       matrix:
         os:
-          - 'amazonlinux-2'
-          - 'debian-9'
+          - 'almalinux-8'
+          # - 'almalinux-9'
+          # - 'amazonlinux-2'
           - 'debian-10'
+          - 'debian-11'
           - 'centos-7'
-          - 'centos-8'
+          - 'centos-stream-8'
+          # - 'centos-stream-9'
           - 'fedora-latest'
-          - 'ubuntu-1804'
+          - 'rockylinux-8'
+          # - 'rockylinux-9'
           - 'ubuntu-2004'
+          - 'ubuntu-2204'
         suite:
           - 'default'
           - 'ldap'
