CI: Comment AmazonLinux 2023 and remove AmazonLinux 2 testing
AmazonLinux 2023 isn't quite ready or seems to have an issue with the dokken
container.

Signed-off-by: Lance Albertson <lance@osuosl.org>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
         os:
           - "almalinux-8"
           - 'almalinux-9'
-          - 'amazonlinux-2'
+          # - 'amazonlinux-2023'
           - "debian-11"
           - "debian-12"
           - "centos-7"
